source/potatoTheme.css
/* ... */
#settingsIcon:hover {
    animation: text_reveal .5s ease forwards;
}

@media screen and (max-width: 768px) {
    #settingsIcon {
        right: 5%
    }
}

#settingsIcon:hover {
    cursor: pointer;
}

#circleTimer {
    width: 160px;
    height: 160px;
    margin-top: 10px;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 10px;
    border-radius: 50%;
}

.circleLight {
    border: 8px solid black;
    background-color: white;
}

.circleDark {
    border: 8px solid white;
    background-color: #333;
}

.circlePotato {
    border: 8px solid #ff0;
    background-color: #ff0;
    box-shadow: 0 0 50px gold,0 0 150px gold;
}

.circlePotatoBreak {
    border: 8px solid rgb(223, 223, 182);
    background-color: rgb(223, 223, 182);
    box-shadow: 0 0 50px rgb(214, 207, 138),0 0 150px rgb(236, 198, 91);
}

#timerDisplay {
    margin:31px auto;
    padding: 26px 0px;
    font-size: 40px;
    text-shadow: 1px 1px 1px #000;
    font-weight: bold;
}

.buttonWrapper {
    margin-top: 30px;
}

.buttonWrapper button {
    display: inline-block;
    min-width: 100px;
    width: fit-content;
    height: 50px;
    margin: auto;
    white-space: normal;
}

#enterTask {
    border-radius: 18px;
}

.taskContainer {
    display: inline-block;
    /* align-items:inherit; */
}
.taskContainer:hover {
    animation: text_reveal .5s ease forwards;
}

@keyframes text_reveal {
    100% {
        opacity: 1;
    }
}

@keyframes text_hide {
    100% {
        opacity: 0;
    }
}

#enterTask {
    margin-top: 30px;
    height: 40px;
    width: 300px;
}

#taskAdder {
    margin: 20px 0;
    width: fit-content;
    height: 52px;
    font-size: 20px;
}

#notificationBar {
    margin-bottom: 20px;
    font-size: 1.3rem;
}

@media screen and (max-width: 479px) {
    .contentWrapper {
        margin: 0 0;
    }
    .buttonWrapper button {
        min-width: 100px;
        height: 50px;
    }
    #taskBtn {
        width: fit-content;
    }
    .taskContainer {
        display: flex;
        width: 100vw;
        flex-direction: column;
        align-items: center;
        
    }
    #enterTask {
        width: 60%;
    }
    #taskAdder {
        width:  60%;
        height: 50px;
    }
}


/*---------------------------------
         Language DropDown
---------------------------------*/
.dropdown {
    position: absolute;
    display: inline-block;
  }

  #languageBtn {
    position: absolute;
    right: 5%;
    background: none;
    border: none;
  }

  #languageBtn img {
    width: 64px;
    height: 64px;
  }

/*--------------------------------
        Instructions Menu Display
---------------------------------*/

#instructionsMenu {
    margin-top: 60px;
    margin-left: auto;
    margin-right: auto;
    font-size: 1.3rem;
    padding: 20px 40px;
    
}

#instrTopic {
    font-size: 1.65rem;
    font-weight: bold;
    padding-top: 10px;
}

#instrContent {
    font-size: 1.4rem;
    line-height: 1.5;
    margin-top: -10px;
}
#instrContent a img {
    margin-top: 10px;
}
.leftAlign{
    text-align: left;
}

#page {
    font-size: 1.4rem;
}

/*---------------------------------
         Settings Menu Display
---------------------------------*/
.menu {
    position: absolute;
    top: 0%;
    left: 0%;
    right: 0%;
    overflow: hidden;
    min-height: 200px;
    max-width: 768px;
    border: 5px solid #000;
    border-radius: 50px 50px 50px 50px;
    box-shadow: inset 0 -1px 10px 3px #6d6d6d;
    font-size: 38px;
    z-index: 999;
}

#settingsMenu {
    max-width: 375px;
}
.taskHelp {
    font-size: 17px;
    margin: 5px 0px;
    padding-left: 18px;
    padding-right: 15px;
}

.menuLight {
    background-color: white;
    background-image: -webkit-gradient(linear, left bottom, left top, from(#eee), to(#fff));
    background-image: linear-gradient(0deg, #eee, #fff);
}


 #settingsMenuHeader {
    padding: 10px;
    height: 15px;
    cursor: move;
}

#taskMenuHeader {
    padding: 10px;
    height: 15px;
    cursor: move;
}

.headerDark {
    background-color: rgb(85, 85, 85);
    background-image : url("img/drag-lines.png");
    /* background-size: cover; */
    background-position: center;
    background-repeat: no-repeat;
}

.headerLight {
    background-color: #333;
}

.menu p {
    margin-top: 10px;
    margin-bottom: 20px;
}

.close {
    position: absolute;
    left: auto;
    top: 60px;
    right: 0%;
    bottom: auto;
    padding-right: 20px;
    font-size: 20px;
    font-weight: bold;
    cursor: pointer;
    /* color: black; */
    margin-right: 20px;
}


#selectTheme {
    margin: 0 0; 
    font-size: 18px;
}

button {
    margin: 0 10px;
    padding: 10px 15px;
    border: 2px solid #000;
    border-radius: 50px;
    color: #fff;
    font-size: 24px;
    font-weight: bold;
    cursor: pointer;
}

.mainButton {
    background-color: #333;
}

#animationBtn {
    font-size: 18px;
    margin: auto;
    margin-top: 20px;
}

.darkButton {
    background-color: #999;
}

button:hover {
    background-color: rgb(100, 100, 100);
}

.userInputContainer {
    margin: 20px 20px 20px 20px;
    padding-left: 15px;
    padding-right: 15px;
    max-width: 350px;
    text-align: right;
}

.fieldLabel {
    font-size: 21px;
}

input {
    text-align: center;
    font-size: 18px;
}
.customTime {
    width: 60px;
}

.customVolume {
    width: 60px;
}

#volume {
    display: inline-block;
    /* width: fit-content; */
}

#volumeIcon {
    display: inline-block;
    width: 40px;
    margin-left: 12px;
    vertical-align: middle;
    cursor: pointer;
}

.userInputContainer div {
    display: block;
}

.userInputContainer input {
    border-radius: 20px;
    border-style: solid black;
    border-width: 5px;
}

.userInputContainer p {
    display: inline;
    margin: 0 -10px;
    font-size: 25px;
}

#langContainer button {
    padding: 0;
    margin-bottom: 20px;
    font-size: 0.4em;
}

/* @media screen and (max-width: 768px) {
    menu {
        width: 100vw;
    }
} */
/* ... */

